[gd_scene load_steps=14 format=3 uid="uid://rfmeawu77fex"]

[ext_resource type="Script" path="res://scripts/root.gd" id="1_r02q6"]
[ext_resource type="PackedScene" uid="uid://bhe2posvt06ua" path="res://scenes/boat.tscn" id="2_0rup1"]
[ext_resource type="PackedScene" uid="uid://1f16hmdwkoid" path="res://scenes/dock.tscn" id="3_fr8yp"]
[ext_resource type="PackedScene" uid="uid://ckoa0m1jy3jsy" path="res://scenes/train_head.tscn" id="4_s072v"]
[ext_resource type="Script" path="res://scripts/cart-container.gd" id="5_w84vm"]
[ext_resource type="Script" path="res://scripts/force-line.gd" id="6_hkloc"]
[ext_resource type="Script" path="res://scripts/win-area.gd" id="7_4j214"]
[ext_resource type="Script" path="res://scripts/collision-disable-area.gd" id="8_rtbic"]
[ext_resource type="Script" path="res://scripts/win-indicator.gd" id="9_qcfrx"]

[sub_resource type="Gradient" id="Gradient_umq7s"]
colors = PackedColorArray(0, 0.266667, 1, 0.709804, 0, 1, 0.45098, 0.67451)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_0aaj3"]
gradient = SubResource("Gradient_umq7s")
width = 242

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6h1dg"]
size = Vector2(1027, 707)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0r8gr"]
size = Vector2(1328, 1400)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_r02q6")

[node name="Boat" parent="." instance=ExtResource("2_0rup1")]
position = Vector2(107, 444)
scale = Vector2(0.5, 0.5)

[node name="Dock" parent="." instance=ExtResource("3_fr8yp")]
position = Vector2(1247, 724)
collision_layer = 0
collision_mask = 0

[node name="Train_head" parent="." instance=ExtResource("4_s072v")]
position = Vector2(1545, 467)
scale = Vector2(2, 2)
collision_layer = 0
collision_mask = 0

[node name="CrateContainer" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(541, 247)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(703, 227)
zoom = Vector2(0.6, 0.6)

[node name="CartContainer" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("5_w84vm")

[node name="Sea" type="Sprite2D" parent="."]
position = Vector2(1115, 731)
scale = Vector2(13.4174, 266.5)
texture = SubResource("GradientTexture1D_0aaj3")

[node name="ForceLine" type="Line2D" parent="."]
unique_name_in_owner = true
visible = false
points = PackedVector2Array(0, 0, 0, 0)
width = 6.0
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource("6_hkloc")

[node name="WinArea" type="Area2D" parent="."]
unique_name_in_owner = true
input_pickable = false
script = ExtResource("7_4j214")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WinArea"]
position = Vector2(1148.5, 37.5)
shape = SubResource("RectangleShape2D_6h1dg")

[node name="CollisionDisableArea" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3
input_pickable = false
script = ExtResource("8_rtbic")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionDisableArea"]
position = Vector2(1186, 160)
shape = SubResource("RectangleShape2D_0r8gr")
debug_color = Color(0.835294, 0.333333, 0.513726, 0.227451)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 18.0
offset_top = 18.0
offset_right = 89.0
offset_bottom = 44.0
text = "Target: all tigers
Winning?"

[node name="Label2" type="Label" parent="CanvasLayer"]
offset_left = 100.0
offset_top = 46.0
offset_right = 140.0
offset_bottom = 69.0
script = ExtResource("9_qcfrx")

[node name="WrongCrateWarning" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -308.0
offset_top = 38.0
offset_right = -38.0
offset_bottom = 64.0
grow_horizontal = 0
text = "The train won't accept other crates"

[connection signal="body_entered" from="CollisionDisableArea" to="CollisionDisableArea" method="_on_body_entered"]
[connection signal="body_exited" from="CollisionDisableArea" to="CollisionDisableArea" method="_on_body_exited"]
